--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,9 @@ services:
     restart: always
 
   postgres:
-    image: postgres:10
+    image: postgres
     environment:
       POSTGRES_PASSWORD: Ebserh.2018PKMB
+      POSTGRES_DB: ebserhpgsql
+      POSTGRES_USER: ebser.2018
     restart: always
